--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd": "^5.26.1",
     "axios": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^3.9.1",
     "classnames": "^2.2.6",
+    "eslint-plugin-custom-rules": "^0.0.0",
     "history": "^4.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
+    "recoil": "^0.7.7",
     "redux": "^4.0.0"
   },
   "devDependencies": {
