--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "chart.js": "^3.9.1",
     "classnames": "^2.2.6",
     "history": "^4.7.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "18",
+    "react-dom": "18",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "6",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0"
   },
@@ -59,8 +59,8 @@
     "@types/i18next-browser-languagedetector": "^2.0.0",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.195",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "18",
+    "@types/react-dom": "18",
     "@types/react-i18next": "^8.1.0",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
@@ -77,6 +77,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-clean-code": "^0.1.12",
+    "eslint-plugin-custom-rules": "^0.0.0",
     "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^27.6.3",
