--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "classnames": "^2.2.6",
     "eslint-plugin-custom-rules": "^0.0.0",
     "history": "^4.7.2",
-    "react": "18",
-    "react-dom": "18",
+    "react": "^18",
+    "react-dom": "^18",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "6",
